--- a/project1/src/App.css
+++ b/project1/src/App.css
@@ -1,42 +1,70 @@
-#root {
-  max-width: 1280px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+  --red: #D01C28
+}
+
+* {
+  margin: 0;
+}
+
+.container{
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 1280px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  font-family: 'Poppins', sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  all : unset;
+  background: var(--red);
+  padding: 6px 16px;
+  color : white;
+  height: 32px;
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  height: 72px;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+nav ul{
+  display: flex;
+  gap: 24px;
+  list-style: none;
 }
 
-.read-the-docs {
-  color: #888;
+.pageBody{
+  display: flex;
+  align-items: center;
+  height: calc(100vh - 72px);
+}
+
+.pageBody-content h1{
+  font-size: 108px;
+  font-weight: 800;
+  line-height: 102px;
+}
+
+.pageBody-content p {
+  font-size:16px;
+  font-weight: 600;
+  list-style: auto;
+  color: gray;
+}
+
+.pageBody-button{
+  display: flex;
+  gap:40px
+}
+
+.secondary-btn{
+  background: transparent;
+  color: grey;
 }
