project complete almost

--- a/project2/src/App.css
+++ b/project2/src/App.css
@@ -13,3 +13,10 @@ body {
   margin: 0 auto;
 }
 
+.main_container{
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh-74px);
+  justify-content: end;
+}
+
