--- a/project2/src/components/Button/Button.module.css
+++ b/project2/src/components/Button/Button.module.css
@@ -9,5 +9,20 @@
     border-radius: 5px;
     gap: 8px;
     min-width: 220px;
-    
+    cursor: pointer;
+}
+
+.outline_btn{
+    padding: 18px 10px;
+    background-color: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    border-radius: 5px;
+    gap: 8px;
+    min-width: 220px;
+    width: 100%;
+    cursor: pointer;
 }
