--- a/project2/src/components/ContactForm/ContactForm.module.css
+++ b/project2/src/components/ContactForm/ContactForm.module.css
@@ -2,9 +2,50 @@
     display: flex;
     max-width: 1000px;
     margin: 0 auto;
+    margin-top: 40px;
+    align-items: end;
 }
 
 .top_btn{
     display: flex;
     gap: 24px;
+}
+
+.contact_form{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.contact_form form{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    padding: 20px;
+}
+
+.form_control{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+}
+
+.form_control input{
+    height: 40px;
+    padding: 0 8px;
+}
+
+.form_control label{
+    font-size: 14px;
+    position: absolute;
+    top: -12px;
+    left: 10px;
+    background-color: white;
+    padding: 0 10px
+}
+
+.submit_button{
+    display: flex;
+    justify-content: end;
 }
